[package]
name = "smushclient_qt"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies.chrono]
workspace = true

[dependencies.cxx]
version = "1.0.192"

[dependencies.cxx-qt]
git = "https://github.com/KDAB/cxx-qt"
version = "0.7.2"

[dependencies.cxx-qt-lib]
git = "https://github.com/KDAB/cxx-qt"
version = "0.7.2"
features = ["chrono", "qt_gui"]

[dependencies.cxx-qt-io]
git = "https://github.com/jnbooth/cxx-qt-io"
rev = "1d4bfd732ca78273c0dcccaa75dd0425b1e4a1c8"
version = "0.2.0"
features = ["net"]

[dependencies.flagset]
workspace = true

[dependencies.mud-transformer]
workspace = true

[dependencies.smushclient]
path = "../../smushclient"
features = ["audio"]

[dependencies.smushclient-plugins]
path = "../../smushclient-plugins"

[build-dependencies.cxx-qt-build]
git = "https://github.com/KDAB/cxx-qt"
version = "0.7.2"

[features]
link_qt_object_files = [
  "cxx-qt-build/link_qt_object_files",
  "cxx-qt-lib/link_qt_object_files",
  "cxx-qt-io/link_qt_object_files",
]
