[package]
name = "smushclient_qt"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
chrono = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
flagset = { workspace = true }
mud-transformer = { workspace = true }

smushclient = { path = "../../smushclient" }
smushclient-plugins = { path = "../../smushclient-plugins" }
smushclient-qt-lib = { path = "../../smushclient-qt-lib" }

[dependencies.cxx-qt-io]
git = "https://github.com/jnbooth/cxx-qt-io"
version = "0.3.2"
features = ["net", "ssl"]

[build-dependencies]
cxx-qt-build = { workspace = true }

[features]
link_qt_object_files = [
  "cxx-qt-build/link_qt_object_files",
  "cxx-qt-lib/link_qt_object_files",
  "cxx-qt-io/link_qt_object_files",
  "smushclient-qt-lib/link_qt_object_files",
]
